[package]
name = "bandwagon-exporter"
version = "0.2.0"
authors = ["icyleaf <icyleaf.cn@gmail.com>"]
description = "A Prometheus Exporter for BandwagonHost KiwiVM."
edition = "2021"

keywords = ["prometheus", "exporter", "bandwagon"]
categories = ["database"]

[dependencies]
clap = { version = "4.5.1", features = ["derive", "env"] }

config = "0.14.0"
serde = "1.0.193"
serde_json = "1.0.109"

hyper = { version = "0.14.20", features = ["full"] }
hyper-rustls = "0.24.1"
tokio = { version = "1", features = ["full"] }

prometheus = "0.13.3"
lazy_static = "1.4.0"
