[package]
name = "bandwagon-exporter"
version = "0.3.0"
authors = ["icyleaf <icyleaf.cn@gmail.com>"]
description = "A Prometheus Exporter for BandwagonHost KiwiVM."
edition = "2021"

keywords = ["prometheus", "exporter", "bandwagon"]
categories = ["database"]

[dependencies]
clap = { version = "4.5.41", features = ["derive", "env"] }

config = "0.15.13"
serde = "1.0.219"
serde_json = "1.0.141"

hyper = { version = "0.14.20", features = ["full"] }
hyper-rustls = "0.24.1"
tokio = { version = "1", features = ["full"] }

prometheus = "0.13.4"
lazy_static = "1.5.0"
